<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".languagesetting.LanguageSettingFragment">

        <TextView
            android:id="@+id/textView"
            style="@style/TitleTextViewSettingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_language_setting_title_text_margin"
            android:text="@string/language_text_view" />

        <TextView
            android:id="@+id/englishLanguageTextView"
            style="@style/TextViewSettingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_language_setting_text_margin"
            android:clickable="true"
            android:text="@string/english" />

        <TextView
            android:id="@+id/russianLanguageTextView"
            style="@style/TextViewSettingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_language_setting_text_margin"
            android:layout_marginEnd="@dimen/fragment_language_setting_text_margin"
            android:clickable="true"
            android:text="@string/russian" />

    </LinearLayout>
</layout>