<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gekaradchenko.weatherforeveryone.viewpager.pagefragments.PageViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".viewpager.pagefragments.Page1Fragment">

        <TextView
            android:id="@+id/page1FragmentTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/page_fragment_margin"
            android:text="@string/quick"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="@dimen/page_fragment_title_size"
            app:layout_constraintBottom_toTopOf="@+id/page1FragmentImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page1AndroidTextView" />

        <ImageView
            android:id="@+id/page1FragmentImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/clounds"
            app:layout_constraintBottom_toTopOf="@+id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page1FragmentTitleTextView"
            tools:src="@tools:sample/avatars" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/page1NextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page1FragmentImageView">

            <TextView
                android:id="@+id/page1FragmentTextTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/page_fragment_margin"
                android:text="@string/second_fragment_text_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/page_fragment_text_size" />

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/page1NextButton"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/page_fragment_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/page_fragment_margin"
            android:onClick="@{()->viewModel.onPageEvent()}"
            android:text="@string/next_tip"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

        <TextView
            android:id="@+id/page1AndroidTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/page_fragment_margin"
            android:text="@string/by_android_team"
            android:onClick="@{()->viewModel.onShowDialog()}"
            android:textColor="@color/android_team"
            android:textSize="@dimen/page_fragment_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>